fix the z-index & make build

--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -1495,7 +1495,7 @@ input:not([type=submit]), textarea {
   position: relative;
   top: 0px;
   width: 100%;
-  z-index: 1; }
+  z-index: 2; }
   #header:after, #header-new:after {
     content: "";
     display: table;
