--- a/scss/style.scss
+++ b/scss/style.scss
@@ -104,7 +104,7 @@ input:not([type=submit]), textarea {
   position: relative;
   top: 0px;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
   @include medium {
     max-height: 740px;
   }
